--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,8 +22,13 @@ build:
     - zlib             # [win]
 requirements:
   build:
+    - {{ compiler('c') }}
+    - {{ compiler('cxx') }}
     - m2-patch  # [win]
     - patch     # [not win]
+    - ninja
+    - cmake
+    - pkg-config
 
 outputs:
   - name: libsolv
