--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,14 @@
 * text=auto
 
-*.patch binary
-*.diff binary
+*.patch text eol=lf
+*.dpatch text eol=crlf
+*.diff text eol=lf
+*.ddiff text eol=crlf
+*.bpatch binary
+*.bdiff binary
+*.tpatch text
+*.tdiff text
+
 meta.yaml text eol=lf
 build.sh text eol=lf
 bld.bat text eol=crlf
@@ -14,12 +21,8 @@ bld.bat text eol=crlf
 .github/* linguist-generated=true
 .travis/* linguist-generated=true
 .appveyor.yml linguist-generated=true
-.gitattributes linguist-generated=true
-.gitignore linguist-generated=true
 .travis.yml linguist-generated=true
 .scripts/* linguist-generated=true
-LICENSE.txt linguist-generated=true
-README.md linguist-generated=true
 azure-pipelines.yml linguist-generated=true
 build-locally.py linguist-generated=true
 shippable.yml linguist-generated=true
