--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,25 +1,26 @@
-{% set version = "0.7.22" %}
-{% set sha256 = "968aef452b5493751fa0168cd58745a77c755e202a43fe8d549d791eb16034d5" %}
-{% set build_number = "0" %}
+{% set name = "libsolv" %}
+{% set version = "0.7.24" %}
 
 package:
-  name: libsolv-suite
+  name: {{ name|lower }}-suite
   version: {{ version }}
 
 source:
-  url: https://github.com/openSUSE/libsolv/archive/{{ version }}.tar.gz
-  sha256: {{ sha256 }}
+  url: https://github.com/openSUSE/{{ name }}/archive/{{ version }}.tar.gz
+  sha256: 62743265222a729c7fe94c40f7b90ccc1ac5568f5ee6df46884e7ce3c16c78c7
   patches:
     - win_export_and_static_build.patch  # [win]
     - conda_variant_priorization.patch
     - pcre2-compat.patch                 # See https://github.com/openSUSE/libsolv/pull/506
+    - no_error_subdir_mismatch.patch
 
 build:
-  number: {{ build_number }}
+  number: 0
   run_exports:
     - {{ pin_subpackage('libsolv', max_pin='x.x') }}
   ignore_run_exports:  # [win]
     - zlib             # [win]
+
 requirements:
   build:
     - {{ compiler('c') }}
@@ -29,6 +30,7 @@ requirements:
     - ninja
     - cmake
   host:
+    # pkg-config is placed in host because in build it is not available for win64
     - pkg-config
     - zlib
     - pcre2
@@ -44,6 +46,7 @@ outputs:
         - ninja
         - cmake
       host:
+        # pkg-config is placed in host because in build it is not available for win64
         - pkg-config
         - zlib
         - pcre2
@@ -53,12 +56,17 @@ outputs:
         - test -f ${PREFIX}/lib/libsolvext${SHLIB_EXT}  # [unix]
         - test -f ${PREFIX}/lib/libsolv.so.1            # [linux]
         - test -f ${PREFIX}/include/solv/repo.h         # [unix]
-        - if exist %LIBRARY_INC%\solv\repo.h (exit 0) else (exit 1)  # [win]
-        - if exist %LIBRARY_LIB%\solv.lib (exit 0) else (exit 1)     # [win]
-        - if exist %LIBRARY_LIB%\solvext.lib (exit 0) else (exit 1)  # [win]
-        - if exist %LIBRARY_BIN%\solv.dll (exit 0) else (exit 1)     # [win]
+        - if not exist %LIBRARY_INC%\solv\repo.h (exit 1)     # [win]
+        - if not exist %LIBRARY_BIN%\solv.dll (exit 1)        # [win]
+        - if not exist %LIBRARY_LIB%\solv.lib (exit 1)        # [win]
+        - if not exist %LIBRARY_BIN%\solvext.dll (exit 1)     # [win]
+        - if not exist %LIBRARY_LIB%\solvext.lib (exit 1)     # [win]
+        - if exist %LIBRARY_LIB%\solv_static.lib (exit 1)     # [win]
+        - if exist %LIBRARY_LIB%\solvext_static.lib (exit 1)  # [win]
+        # Running the executables
         - dumpsolv.exe -h  # [win]
         - dumpsolv -h      # [unix]
+
   - name: libsolv-static
     script: install.sh          # [unix]
     script: install_static.bat  # [win]
@@ -77,10 +85,10 @@ outputs:
         - {{ pin_subpackage("libsolv", exact=True) }}
     test:
       commands:
-        - test -f ${PREFIX}/lib/libsolv.a     # [unix]
-        - test -f ${PREFIX}/lib/libsolvext.a  # [unix]
-        - if exist %LIBRARY_LIB%\solv_static.lib (exit 0) else (exit 1)     # [win]
-        - if exist %LIBRARY_LIB%\solvext_static.lib (exit 0) else (exit 1)  # [win]
+        - test -f "${PREFIX}/lib/libsolv.a"     # [unix]
+        - test -f "${PREFIX}/lib/libsolvext.a"  # [unix]
+        - if not exist %LIBRARY_LIB%\solv_static.lib (exit 1)     # [win]
+        - if not exist %LIBRARY_LIB%\solvext_static.lib (exit 1)  # [win]
 
 about:
   home: https://github.com/openSUSE/libsolv
@@ -88,10 +96,10 @@ about:
   license_family: BSD
   license_file: LICENSE.BSD
   summary: Library for solving packages and reading repositories
-  description: libsolv, a free package dependency solver using a satisfiability algorithm.
+  description: |
+    libsolv, a free package dependency solver using a satisfiability algorithm.
   dev_url: https://github.com/openSUSE/libsolv
   doc_url: https://github.com/openSUSE/libsolv/tree/master/doc
-  doc_src_url: https://github.com/openSUSE/libsolv/tree/master/doc
 
 extra:
   recipe-maintainers:
