--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -9,9 +9,10 @@ source:
   url: https://github.com/openSUSE/{{ name }}/archive/{{ version }}.tar.gz
   sha256: ce4aa2f0e3c5c9ab99dced6a1810af3f670f1b98892394edc68ccabe7b272133
   patches:
-    - win_export_and_static_build.patch  # [win]
-    - conda_variant_priorization.patch
-    - no_error_subdir_mismatch.patch
+    - patches/win_export_and_static_build.patch  # [win]
+    - patches/conda_variant_priorization.patch
+    - patches/no_error_subdir_mismatch.patch
+    - patches/pcre2-compat.patch
 
 build:
   number: 0
